[package]
name = "scheduler"
version = "0.1.0"
authors = ["MDeiml <matthias@deiml.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
sled = "0.34"
bcrypt = "0.1"
serde = "1.0"
bincode = "1.3"
rand = "0.8"
env_logger = "0.8"
